ingress-rule/ingress-rule.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dexter-ingress
  namespace: backend
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: dexter.singhritesh85.com
    http:
      paths:
      - path: /
        backend:
          service:
            name: wildfly-folo
            port:
              number: 80
        pathType: Prefix
