ingress-rule/rabbitmq-ingress-rule.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  namespace: rabbitmq
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: rabbitmq.singhritesh85.com
    http:
      paths:
      - path: /
        backend:
          service:
            name: rabbitmq
            port:
              number: 15672
        pathType: Prefix
